clusters/common/apps/tailscale/resources/tsflow/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tsflow
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: keiretsu
  hostnames:
    - "tsflow.${LOCATION}.${RAJSINGH_INFO_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tsflow
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
